--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -2059,7 +2059,8 @@ keywords = "Relative permeability curve"
 @misc{retc,
 title = "{RETC}, version 6.02 -- Code for quantifying the hydraulic functions of unsaturated soils.",
 author = "M. Th. van Genuchten and J. Simunek and F. J. Leiji and M. Sejna",
-url = "http://www.hydrus3d.com"
+url = "http://www.hydrus3d.com",
+year = "2009"
 }
 
 
